--- a/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/App.css
+++ b/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/App.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: #f7f7fa;
+}
+
+i {
+  transition: 0.4s ease;
+  color :black;
+  font-size: 1.5rem;
 }
