--- a/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/components/styles/loginForm.module.css
+++ b/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/components/styles/loginForm.module.css
@@ -45,3 +45,18 @@
     background-color: #727272;
 
 }
+.balloon {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    border-radius: 5px;
+    position: relative;
+    animation: fadeOut 2s forwards;
+}
+
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+}
