--- a/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/sidebar/styles/myInfo.module.css
+++ b/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/sidebar/styles/myInfo.module.css
@@ -1,5 +1,6 @@
 .container {
     padding: 20px;
+    margin-bottom: 30px;
     border-radius: 10px 10px 10px 10px;
     background: #f7f7fa;
     display: flex;
