--- a/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/components/styles/mainLogo.module.css
+++ b/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/components/styles/mainLogo.module.css
@@ -2,6 +2,9 @@
     display: flex;
     align-items: center;
     text-decoration: none;
+    height: 50px;
+    flex-direction: row;
+    margin-right: 40px;
 }
 
 .logo {
