--- a/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/login/styles/loginForm.module.css
+++ b/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/login/styles/loginForm.module.css
@@ -16,12 +16,11 @@
 }
   
 .btn {
+    font-size: 13px;
     transition: 0.1s ease;
-    font-size: 15px;
     width: 100%;
     padding: 10px;
     background-color: #d6d6d6;
-    color: rgb(66, 66, 66);
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -33,6 +32,7 @@
 }
 
 .btn_signUp {
+    font-size: 13px;
     background-color: white;
     margin-top: 10px;
     padding: 5px;
@@ -45,18 +45,13 @@
     background-color: #727272;
 
 }
-.balloon {
-    margin-top: 10px;
-    padding: 10px;
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
-    border-radius: 5px;
-    position: relative;
-    animation: fadeOut 2s forwards;
-}
 
-@keyframes fadeOut {
-    0% { opacity: 1; }
-    100% { opacity: 0; }
+.a:link {
+    text-decoration-line: none;
+}
+.a:visited, .a:active {
+    color: rgb(66, 66, 66);
+}
+.a:hover {
+    color: #eeeeee;
 }
