--- a/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/header/styles/header.module.css
+++ b/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/header/styles/header.module.css
@@ -1,11 +1,9 @@
 .header {
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    height: 100%;
     padding-left: 40px;
     padding-right: 40px;
     border-bottom: 0.4px solid #A4A3A4;
-}
-
-.header_item {
-    align-self: center;
+    justify-content: space-between;
 }
