--- a/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/sidebar/styles/sidebar.module.css
+++ b/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/sidebar/styles/sidebar.module.css
@@ -3,6 +3,7 @@
     transition: 0.4s ease;
 }
 .sidebar.expended{
+    left: 0px;
     width: 280px;
 }
 .sidebar.collapsed{
@@ -16,8 +17,18 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-    position: fixed;
     transition: 0.3s ease;
+    overflow-y: auto;
+    position: absolute;
+}
+
+.sidebar_box::-webkit-scrollbar {
+    width: 5px;
+}
+
+.sidebar_box::-webkit-scrollbar-thumb {
+    background-color: #d6d6d6;
+    border-radius: 2.5px;
 }
 
 .sidebar_box.expended {
@@ -25,11 +36,9 @@
     bottom: 0;
     height: 100%;
     border-right: 0.4px solid #A4A3A4;
-    border-radius: 0 10px 10px 0;
 }
 
 .sidebar_box.collapsed {
-    position: fixed;
     height: 90%;
     border-radius: 0 20px 20px 0;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
