--- a/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/sidebar/styles/sidebarContent.module.css
+++ b/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/sidebar/styles/sidebarContent.module.css
@@ -27,6 +27,8 @@
 }
 
 .item {
+    display: flex;
+    flex-direction: column;
     overflow-y: auto;
 }
 
@@ -36,19 +38,20 @@
 
 .item::-webkit-scrollbar-thumb {
     background-color: #d6d6d6;
+    border-radius: 5px;
 }
 
-.Content {
+.content {
     transition: 0.1s ease;
     padding: 8px;
     border-bottom: 1px solid #e0e0e0;
     font-size: 14.5px;
 }
 
-.Content:hover {
+.content:hover {
     background-color: rgb(218, 218, 218);
 }
 
-.Content:last-child {
+.content:last-child {
     border-bottom: none;
 }
