--- a/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/content/components/styles/postRow.module.css
+++ b/wooriggiriProject/wooriggiri/frontend/wooriggiri/src/content/components/styles/postRow.module.css
@@ -32,7 +32,7 @@
 .postInfo {
     display: flex;
     width: 400px;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .ac_c {
@@ -45,4 +45,8 @@
 }
 .box a:hover {
     color: #505050;
+}
+.createdDate {
+    min-width: 140px;
+    text-align: center;
 }
